<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="org.maggus.myhealthnb.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_share"
            app:destination="@id/navigation_share" />
    </fragment>

    <fragment
        android:id="@+id/navigation_share"
        android:name="org.maggus.myhealthnb.ui.share.ShareFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_share">
        <action
            android:id="@+id/action_navigation_share_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_share_to_navigation_verify"
            app:destination="@id/navigation_verify" />
    </fragment>

    <fragment
        android:id="@+id/navigation_verify"
        android:name="org.maggus.myhealthnb.ui.verify.VerifyFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_verify" >
        <action
            android:id="@+id/action_navigation_verify_to_navigation_share"
            app:destination="@id/navigation_share" />
    </fragment>
</navigation>